[package]
name = "teyemer"
version = "0.2.1"
edition = "2021"
authors = ["Christopher Mann"]
license = "MIT"
description = "A timer to look away from the screen"
readme = "README.md"
homepage = "https://github.com/chriswmann/teymer"
repository = "https://github.com/chriswmann/teymer"
keywords = ["timer", "eyes", "health"]
categories = ["command-line-utilities"]

[dependencies]
rodio = "0.17.3"
clap = { version = "4.5.11", features = ["derive"] }
