[package]
name = "teyemer"
version = "0.2.3"
edition = "2024"
authors = ["Christopher Mann"]
license = "MIT"
description = "A timer to look away from the screen regularly"
readme = "README.md"
homepage = "https://github.com/chriswmann/teyemer"
repository = "https://github.com/chriswmann/teyemer"
keywords = ["timer", "eyes", "health"]
categories = ["command-line-utilities"]

[dependencies]
rodio = "0.21.1"
clap = { version = "4.5.11", features = ["derive"] }
